compiler/tests/fa/errors/persian_type.salam
// انتظار: خطا۰۰۲
// زبان: فارسی
تابع اصلی:
    x صحیح۳۲ = "سلام"
پایان
